--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "devDependencies": {
     "nodemon": "^3.1.11",
     "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "epress": "^0.0.1-security",
+    "express": "^5.1.0",
+    "mongoose": "^9.0.0"
   }
 }
