--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "epress": "^0.0.1-security",
     "express": "^5.1.0",
