--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "epress": "^0.0.1-security",
     "express": "^5.1.0",
-    "mongoose": "^9.0.0"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.0",
+    "mongoose-aggregate-paginate-v2": "^1.1.4"
   }
 }
